many: Update Iron Chests to NeoForge 1.21